--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+#To add a list of endpoint added by comma delimited
+#management.endpoints.web.exposure.include=health,info
+#To add all endpoints use asterisc
+management.endpoints.web.exposure.include=*
+management.info.env.enabled=true
+# to exclude some endpoints
+# management.endpoints.web.exposure.exclude=health,info
 
+
+info.app.name=Myapp
+info.app.description=App to learn Spring Boot
+info.app.version=1.0.0
