Reading values from the application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ management.info.env.enabled=true
 info.app.name=Myapp
 info.app.description=App to learn Spring Boot
 info.app.version=1.0.0
+
+# Defining custom properties
+coach.name=Steve Kerr
+team.name=Golden State Warrior
